--- a/index.html
+++ b/index.html
@@ -8,29 +8,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-      
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-          apiKey: "AIzaSyD5EWPO5EERuBr0kit9ynuHqSJh0eDFSzU",
-          authDomain: "happybdayjhos.firebaseapp.com",
-          projectId: "happybdayjhos",
-          storageBucket: "happybdayjhos.appspot.com",
-          messagingSenderId: "142599251982",
-          appId: "1:142599251982:web:a7731a48173782af25f45f",
-          measurementId: "G-RESMBNFC3T"
-        };
-      
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-      </script>
     <header>
         <div class="header-image">
             <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\HAPPY B-DAY JHOSELINE.png" alt="FC Barcelona">
@@ -55,7 +32,7 @@
             <div class="content content-links">
                 <div class="link-item">
                     <a href="whatdo.html">
-                        <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\p1.jpg" alt="What Do I Know about Jhos">
+                        <img src="https://drive.google.com/file/d/1-r5uESeEeZvLmLouT1sovZiTfg09VjUM/view?usp=drive_link" alt="What Do I Know about Jhos">
                         <p>What Do I Know about Jhos</p>
                     </a>
                 </div>
