--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2> tú sabes que te quiero un montón y espero te guste la pt.1 de tu cumple...</h2>
             </div>
             <div class="image">
-                <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\download-removebg-preview.png" alt="Imagen de cumpleaños">
+                <img src="https://ibb.co/SRQ2xY2" alt="Imagen de cumpleaños">
             </div>
         </div>
             <div class="text">
