--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <div class="content content-links">
                 <div class="link-item">
                     <a href="whatdo.html">
-                        <img src="https://drive.google.com/file/d/1-r5uESeEeZvLmLouT1sovZiTfg09VjUM/view?usp=drive_link" alt="What Do I Know about Jhos">
+                        <img src="C:\Users\cokei\OneDrive\Escritorio\jchaveeez23.github.io\IMG\p1.jpg" alt="What Do I Know about Jhos">
                         <p>What Do I Know about Jhos</p>
                     </a>
                 </div>
                 <div class="link-item">
                     <a href="topsongs.html">
-                        <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\p2.jpg" alt="Jhos Top 10 songs">
+                        <img src="IMG\p2.jpg" alt="Jhos Top 10 songs">
                         <p>Jhos Top 10 songs</p>
                     </a>
                 </div>
