canciones e index listos

--- a/topsongs.html
+++ b/topsongs.html
@@ -14,61 +14,61 @@
         <div class="ranking">
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/unbreakable/984516112?i=984516366&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t1.jpg" alt="Wolf Team">
+                    <img src="IMG\t1.jpg" alt="Wolf Team">
                     <p>1. Unbreakable - Jamie Scott</p>
                 </a>
             </div>
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/see-the-light-radio-version/1508634487?i=1508634489&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t2.jpg" alt="Tiger Team">
+                    <img src="IMG\t2.jpg" alt="Tiger Team">
                     <p>2. See the light - TobyMac</p>
                 </a>
             </div>
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/lacone/1655176120?i=1655176121&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t3.jpg" alt="Bear Team">
+                    <img src="IMG\t3.jpg" alt="Bear Team">
                     <p>3. Lacone - Polima</p>
                 </a>
             </div>
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/whiskey-y-coco/1659477585?i=1659477588&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t4.jpg" alt="Lion Team">
+                    <img src="IMG\t4.jpg" alt="Lion Team">
                     <p>4. Whiskey y Coco - Myke Towers</p>
                 </a>
             </div>
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/pide/1704060516?i=1704060611&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t5.jpg" alt="Snake Team">
+                    <img src="IMG\t5.jpg" alt="Snake Team">
                     <p>5. Pide - Mora</p>
                 </a>
             </div>
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/the-flame/525521081?i=525521084&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t6.jpg" alt="Elephant Team">
+                    <img src="IMG\t6.jpg" alt="Elephant Team">
                     <p>6. The Flame - Cheap Trick</p>
                 </a>
             </div>
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/right-here-waiting/724489398?i=724490044&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t7.jpg" alt="Monkey Team">
+                    <img src="IMG\t7.jpg" alt="Monkey Team">
                     <p>7. Right Here Waiting - Richard Marx</p>
                 </a>
             </div>
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/casa-en-el-aire/1454550941?i=1454550950&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t8.jpg" alt="Parrot Team">
+                    <img src="IMG\t8.jpg" alt="Parrot Team">
                     <p>8. Casa en el aire - Arevalo</p>
                 </a>
             </div>
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/chica-paranormal/1446461360?i=1446461361&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t9.jpg" alt="Dolphin Team">
+                    <img src="IMG\t9.jpg" alt="Dolphin Team">
                     <p>9. Chica Paranormal - Paulo Londra</p>
                 </a>
             </div>
             <div class="rank-item">
                 <a href="https://music.apple.com/gt/album/te-vas-conmigo/1271532818?i=1271533120&l=en-GB">
-                    <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\t10.jpg" alt="Whale Team">
+                    <img src="IMG\t10.jpg" alt="Whale Team">
                     <p>10. Te vas Conmigo - Farruko</p>
                 </a>
             </div>
