--- a/tuvideo.html
+++ b/tuvideo.html
@@ -13,7 +13,7 @@
             <h1>Birthday Video :P</h1>
             <h1>Espero te guste :), te quiero tres millones <3</h1>
             <div class="video-container">
-                <iframe src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\cumvideo.mp4" frameborder="0" allowfullscreen></iframe>
+                <iframe src="IMG\cumvideo.mp4" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
         <div class="section">
