--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="header-image">
-            <img src="https://i.ibb.co/GnZfJ7s/HAPPY-B-DAY-JHOSELINE.png" alt="HAPPY-B-DAY-JHOSELINE" border="0">
+            <img src="IMG\HAPPY B-DAY JHOSELINE.png" alt="HAPPY-B-DAY-JHOSELINE" border="0">
         </div>
     </header>
     <main>
