--- a/whatdo.html
+++ b/whatdo.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <div class="side-images">
-            <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\thing4.jpeg" alt="Imagen 1">
-            <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\thing 2.jpeg" alt="Imagen 2">
-            <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\thing6.jpeg" alt="Imagen 3">
+            <img src="IMG\thing4.jpeg" alt="Imagen 1">
+            <img src="IMG\thing 2.jpeg" alt="Imagen 2">
+            <img src="IMG\thing6.jpeg" alt="Imagen 3">
         </div>
         <div class="main-content">
             <h1>What Do i know about mi rhlm?</h1>
