maybe final commit

--- a/whatdo.html
+++ b/whatdo.html
@@ -22,9 +22,9 @@
             <p>Ya con este HDIKA tan vacio van a decir: "Este tonoto no sabe nada de ella", y si :( tal vez no es una amistad de infancia la que tengo con ella, pero realmente estoy agradecido contigo Jhoseline Maribel por que te puedo llamar mi "realita" :), gracias por ser tan especial para mi vida y por ser de esas personas que yo me quitaría un riñon por ellas. Te quiero 3 millones.</p>
         </div>
         <div class="side-images">
-            <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\thing1.jpeg" alt="Imagen 4">
-            <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\thing5.jpeg" alt="Imagen 5">
-            <img src="C:\Users\cokei\OneDrive\Escritorio\CUM JHOS PT2\IMG\p1.jpg" alt="Imagen 6">
+            <img src="IMG\thing1.jpeg" alt="Imagen 4">
+            <img src="IMG\thing5.jpeg" alt="Imagen 5">
+            <img src="IMG\p1.jpg" alt="Imagen 6">
         </div>
     </div>
 </body>
